# FHDpy

./: .gitignore  ComputeFundamentalGroupDehnTwist.ipynb  ExperimentsWithFHD.ipynb  README.md  README.txt  Sketch.ipynb  Tests.ipynb  TutorialFHD.ipynb  TutorialSLP.ipynb  Twister.ipynb  pyproject.toml  requirements.txt.txt
.ipynb_checkpoints/: Sketch-checkpoint.ipynb
FHDpy/: FHD.py  FPG.py  SLP.py  __init__.py
FHDpy/.ipynb_checkpoints/: FHD-checkpoint.py  SLP-checkpoint.py  __init__-checkpoint.py
fhdpy_env/: pyvenv.cfg
notebooks/: TutorialFHD.ipynb  TutorialSLP.ipynb
src/FHDpy/: __init__.py  fhd.py  fpg.py  slp.py
tests/: test_fhd.py  test_slp.py
